// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TEquipBase
message TEquipBase
{	
	
	
	repeated EquipDefine Equip = 1; // Equip

}

// Defined in table: Equip
message EquipDefine
{	
	
	
	optional int32 Id = 1; // 道具ID
	
	
	optional string Name = 2; // 装备名
	
	
	optional string Desc = 3; // 装备简介
	
	
	optional int32 Pos = 4; // 装备类型：1.头部2.上身3.下身4.鞋子5.翅膀6.手持7.套装8.长衣
	
	
	optional int32 SuitId = 5; // 套装id
	
	
	optional int32 Sex = 6; // 0女1男2全部
	
	
	repeated string LoadPoint = 7; // 挂载点；套装要把所有的挂载点全部填进去
	
	
	optional string Path = 8; // 图片路径
	
	
	repeated string Skill = 9; // 技能id
	
	
	optional int32 Price = 10; // 价格
	
	
	optional int32 CoinType = 11; // 货币类型:1金币2钻石
	
	
	optional string Suit = 12; // 图集名称

}

